<resources>
    <string name="app_name">IMIS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Pleasewait">Please wait…</string>
    <string name="PageLoading">Page is loading…</string>
    <string name="HeaderTitle">IMIS</string>
    <string name="HeaderEmail">admin@imis.com</string>
    <string name="Home">Home</string>
    <string name="Enrolment">Enrolment</string>
    <string name="Renewal">Renewal</string>
    <string name="Feedback">Feedback</string>
    <string name="Sync">Sync</string>
    <string name="About">About</string>
    <string name="Quit">Quit</string>
    <string name="Region">Region</string>
    <string name="District">District</string>
    <string name="Ward">Municipality</string>
    <string name="Village">Village</string>
    <string name="PovertyStatus">Poverty Status</string>
    <string name="ConfirmationType">Confirmation Type</string>
    <string name="ConfirmationNo">Confirmation No.</string>
    <string name="GroupType">Group Type</string>
    <string name="Ethnicity">Ethnicity</string>
    <string name="PermanentAddress">Permanent Address Details</string>
    <string name="Next">Next</string>
    <string name="SelectRegion">Select Region</string>
    <string name="SelectDistrict">Select District</string>
    <string name="SelectWard">Select Municipality</string>
    <string name="SelectVillage">Select Village</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="SelectPovertyStatus">Select Poverty Status</string>
    <string name="SelectConfirmationType">Select confirmation type</string>
    <string name="SelectFamilyType">Select Group type</string>
    <string name="Ok">OK</string>
    <string name="FieldRequired">Please verify all the required fields marked in red border</string>
    <string name="InsuranceNumber">Insurance Number</string>
    <string name="OtherNames">Other Names</string>
    <string name="LastName">Last Name</string>
    <string name="BirthDate">Birth Date</string>
    <string name="Gender">Gender</string>
    <string name="MaritalStatus">Marital Status</string>
    <string name="BeneficiaryCard">Beneficiary Card</string>
    <string name="CurrentDistrict">Current District</string>
    <string name="CurrentMunicipality">Current Municipality</string>
    <string name="CurrentVillage">Current Village</string>
    <string name="CurrentAddress">Current Address Details</string>
    <string name="Profession">Profession</string>
    <string name="Education">Education</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="Email">Email</string>
    <string name="IdentificationType">Identification Type</string>
    <string name="IdentificationNumber">Identification Number</string>
    <string name="FSPDistrict">District of FSP</string>
    <string name="FSPCategory">Level of FSP</string>
    <string name="FSP">First Service Point</string>
    <string name="SelectGender">Select Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
    <string name="SelectMaritalStatus">Select marital status</string>
    <string name="Married">Married</string>
    <string name="Single">Single</string>
    <string name="Divorced">Divorced</string>
    <string name="Widowed">Widowed</string>
    <string name="NotSpecified">Not specified</string>
    <string name="SelectBeneficiary">Select beneficiary card</string>
    <string name="SelectProfession">Select profession</string>
    <string name="SelectEducation">Select education</string>
    <string name="SelectIdentificationType">Select identification type</string>
    <string name="SelectHFLevel">Select HF level</string>
    <string name="Dispensary">Dispensary</string>
    <string name="HealthCentre">Health Centre</string>
    <string name="Hospital">Hospital</string>
    <string name="SelectHF">Select Health facility</string>
    <string name="Save">Save</string>
    <string name="Relation">Relationship</string>
    <string name="SelectRelationship">Select Relationship</string>
    <string name="FamilySaved">Family saved successfuly</string>
    <string name="ErrorOccurred">Error occurred while processing data.</string>
    <string name="ErrorInsert">Error while inserting data</string>
    <string name="ErrorUpdate">Error while updating data</string>
    <string name="InsuranceNumberExists">Member with this Insurance number already exists</string>
    <string name="Add">Add</string>
    <string name="New">New</string>
    <string name="SelectOfficer">Select Officer</string>
    <string name="SelectProduct">Select Product</string>
    <string name="EnrolmentDate">Enrolment date</string>
    <string name="Product">Product</string>
    <string name="EffectiveDate">Effective Date</string>
    <string name="StartDate">Start Date</string>
    <string name="ExpireDate">Expire Date</string>
    <string name="Officer">Officer</string>
    <string name="PolicyStatus">Policy Status : </string>
    <string name="PolicyValue">Policy Value : </string>
    <string name="Balance">Balance : </string>
    <string name="Contribution">Contribution : </string>
    <string name="Enquire">Enquire</string>
    <string name="Payer">Payer</string>
    <string name="PayDate">Payment Date</string>
    <string name="ContributionCategory">Contribution Category </string>
    <string name="Receipt">Receipt No </string>
    <string name="Amount">Contribution Paid</string>
    <string name="PaymentType">Payment Type</string>
    <string name="SelectPayer">Select Payer</string>
    <string name="SelectLevel">Select Level</string>
    <string name="PremiumContribution">Contribution and Others</string>
    <string name="PremiumPhotoFee">Photo Fee</string>
    <string name="SelectPaymentType"> Select Payment Type</string>
    <string name="Cash">Cash</string>
    <string name="MobilePhone">Mobile Phone</string>
    <string name="BankTransfer">Bank Transfer</string>
    <string name="ReceiptNo">Receipt No :</string>
    <string name="Expired">Expired</string>
    <string name="Active">Active</string>
    <string name="Idle">Idle</string>
    <string name="Suspended">Suspended</string>
    <string name="ReceiptNotUnique">Receipt number must be unique</string>
    <string name="PleaseDeletePremium">Policy has contribution. Please delete contributions first</string>
    <string name="PolicyDeleted">Policy deleted successfully</string>
    <string name="PremiumDeleted">Contribution deleted successfully</string>
    <string name="InsureeDeleted">Insuree deleted successfully</string>
    <string name="IsHeadDelete">You can not delete the head of the family.</string>
    <string name="FamilyHasPolicy">Family has policy please delete the policy first</string>
    <string name="InsureeNotDeleted">Insuree has not deleted</string>
    <string name="FamilyDeleted">Family deleted</string>
    <string name="Scan">Scan</string>
    <string name="InsureeName">Insuree Name</string>
    <string name="ReadOnly">SD Card is set to readonly mode. Please set the mode to read/write and restart the application.</string>
    <string name="NoSDCard">IMIS needs external memory card to run. Please insert memory card and restart the application.</string>
    <string name="ForceClose">Force Close</string>
    <string name="MissingInsuranceNumber">Please enter Insurance number</string>
    <string name="InvalidInsuranceNumber">Invalid Insurance number</string>
    <string name="InvalidNumber">Invalid input</string>
    <string name="GetingInsuuree">Getting insuree info&#8230;</string>
    <string name="RecordNotFound">Member with this Insurance No. does not exist.</string>
    <string name="NoRenewalFound">No renewal found</string>
    <string name="NoInternet">Please check your internet connection.</string>
    <string name="Submit">Submit</string>
    <string name="DiscontinuePolicy">Discontinue this policy</string>
    <string name="DiscontinuePolicyQ">Do you want to discontinue this policy?</string>
    <string name="ProductCode">Product Code</string>
    <string name="Loading">loading…</string>
    <string name="UploadedSuccessfully">Data uploaded on the server successfully.</string>
    <string name="ServerRejected">Data is rejected by the server. Data is moved to the rejected folder of the phone.</string>
    <string name="BulkUpload">Data has been uploaded successfully. Please check your Rejected/Accepted folders to verify the server response.</string>
    <string name="MissingOfficerCode">Please enter officer code</string>
    <string name="SavedOnSDCard">File is saved on external storage.</string>
    <string name="Uploading">uploading&#8230;</string>
    <string name="NoFeedbackFound">No feedback found</string>
    <string name="InternetRequired">Internet connection is required to view the statistics.</string>
    <string name="GetStats">Preview</string>
    <string name="NoStatFound">No data found</string>
    <string name="Statistics">Statistics</string>
    <string name="ClaimId">Claim Code</string>
    <string name="Question1">Have you been treated at the facility on the said date?</string>
    <string name="Question2">Have you been asked for a payment to the facility or staff?</string>
    <string name="Question3">Have drugs been prescribed to you?</string>
    <string name="Question4">Did you get drugs from the facility?</string>
    <string name="Assessment">How satisfied are you with the care you received at the health facility? Rate on a scale 1&#8211;5 (1= not satisfied; 5= very satisfied)</string>
    <string name="UploadingFeedback">Uploading feedback&#8230;</string>
    <string name="UploadAllFeedback">Upload all feedback</string>
    <string name="MissingOfficer">Please enter Enrolment Assistant Code</string>
    <string name="MissingClaimID">Please enter Claim ID</string>
    <string name="MissingInsureeNumber">Please enter Insurance Number</string>
    <string name="MissingAnswers">All the questions must be answered.</string>
    <string name="EndDate">End Date</string>
    <string name="MissingEndDate">Please enter End Date</string>
    <string name="InProgress">In Progress…</string>
    <string name="MissingStartDate">Please enter Start Date</string>
    <string name="MissingReceiptNo">Please enter Receipt No.</string>
    <string name="MissingProductCode">Please enter product code</string>
    <string name="MissingAmount">Please enter amount</string>
    <string name="InvalidReceiptNo">This receipt number is already used.</string>
    <string name="NoFiles">No file found.</string>
    <string name="Of">Of</string>
    <string name="LoginName">Login Name</string>
    <string name="LoginFail">Login Failed</string>
    <string name="Password">Password</string>
    <string name="OfficerCode">Officer Code :</string>
    <string name="IncorrectOfficerCode">Incorrect officer code</string>
    <string name="Login">Login</string>
    <string name="FTPConnectionFailed">Unable to connect the server. Operation aborted.</string>
    <string name="UncaughtException">Failed</string>
    <string name="FamilyUploaded">Family uploaded successfully</string>
    <string name="MissingHOF">Given family has no HOF</string>
    <string name="DuplicateHOF">Family with this Insurance number already exists</string>
    <string name="DuplicateInsuranceNumber">Duplicate Insurance number found</string>
    <string name="DuplicateReceiptNumber">Duplicate receipt number found</string>
    <string name="DownloadMasterDataFailed">Could not download master data.</string>
    <string name="DownloadingMasterData">Downloading master data</string>
    <string name="DataDownloadedSuccess">Data downloaded successfully</string>
    <string name="Acquire">Acquire</string>
    <string name="ModifyFamily">Modify family</string>
</resources>