<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context=".Feedback">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <EditText
            android:id="@+id/etOfficer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Officer"
            android:clickable="false"
            android:cursorVisible="false"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:maxLines="1">

            <requestFocus android:layout_width="fill_parent" />
        </EditText>

        <EditText
            android:id="@+id/etClaimCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ClaimId"
            android:inputType="none|number"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false" />

        <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp" > -->

            <EditText
                android:id="@+id/etCHFID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/InsuranceNumber"
                android:inputType="none|number"
                android:maxLength="12"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:longClickable="false">

            </EditText>



            <!--<ImageButton
                android:id="@+id/btnScan"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:contentDescription="@string/Scan"
                android:src="@drawable/scan" /> -->

        <!-- </LinearLayout> -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/Question1"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1" >


            <RadioButton
                android:id="@+id/rYes1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/Yes" />

            <RadioButton
                android:id="@+id/rNo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No" />

        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/Question2"/>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1" >


            <RadioButton
                android:id="@+id/rYes2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/Yes" />

            <RadioButton
                android:id="@+id/rNo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No" />

        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/Question3"/>

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1" >


            <RadioButton
                android:id="@+id/rYes3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/Yes" />

            <RadioButton
                android:id="@+id/rNo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No" />

        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/Question4"/>

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1" >


            <RadioButton
                android:id="@+id/rYes4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/Yes" />

            <RadioButton
                android:id="@+id/rNo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No" />

        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/Assessment"/>

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1.0"
            android:layout_weight="1" />



        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Submit" />
    </LinearLayout>

</ScrollView>
